--- a/Stock_Prediction_Project.ipynb
+++ b/Stock_Prediction_Project.ipynb
@@ -384,7 +384,7 @@
         }
       ],
       "source": [
-        "# Downloading and displaying the top 5 rows of data for Alphabet Inc.(GOOGL)\n",
+        "# Downloading and displaying the top 5 rows of data for Abbott Laboratories.(ABT)\n",
         "stock_data = yf.download('ABT', start='2023-01-01', end='2024-09-16')\n",
         "stock_data.head().sort_index(ascending=True)\n"
       ]
