--- a/Stock_Prediction_Project.ipynb
+++ b/Stock_Prediction_Project.ipynb
@@ -1076,7 +1076,7 @@
         "id": "4q4_gp4kVv5e"
       },
       "source": [
-        "**Concluding statements** : I got a R-squared value of .97 which means that almost 97% of the variance in historical stock prices was explained by my model.\n",
+        "**Concluding statements** : I got a R-squared value of .9728 which means that over 97% of the variance in historical stock prices was explained by my model.\n",
         "Also I had a fairly low value of MSE (1.35) which means that there was not much error between my predicted and actual values of stock prices for Abbott Laboratories."
       ]
     }
